# target_following

./: CMakeLists.txt  README.md  package.xml
cfg/: BBoxControllerParams.cfg  ColorBBoxParams.cfg  DRPControllerParams.cfg  PIDControllerParams.cfg
data/: bbox_yaw_pitch_ctr_pid_params.yaml  bbox_yaw_pitch_ctr_pid_params_DIVER.yaml  drp_yaw_pitch_ctr_pid_params.yaml  pred_bbox_yaw_pitch_ctr_pid_params_DIVER.yaml
launch/: bbox_yaw_pitch_controller.launch  bbox_yaw_pitch_controller_FollowDiver.launch  bbox_yaw_pitch_controller_FollowTag.launch  bbox_yaw_pitch_controller_RainbowTracker.launch  drp_yaw_pitch_controller.launch  pid_dyn_reconf.launch  pred_bbox_yaw_pitch_controller_FollowDiver.launch  reconfigure_drp_yaw_pitch_controller.launch  tag_detect.launch
msg/: Params.msg  TargetObservation.msg  TargetObservations.msg
scripts/: artag_bbox_publisher.py  bbox_yaw_pitch_controller.py  darknet_pred_bbox_yaw_pitch_controller.py  drp_yaw_pitch_controller.py  drp_yaw_pitch_controller_reconf.py  pid.py  pred_bbox_yaw_pitch_controller.py
